# real-time-event-streaming

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
backend/: main.py  producer.py
frontend/: index.html
