[project]
name = "realtime-event-streaming"
version = "0.1.0"
description = "Real-time event streaming with Kafka, ksqlDB, and Server-Sent Events (SSE)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.12.2",
    "fastapi[standard]>=0.122.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
